--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start:db": "json-server -w db.json",
+        "start:parcel": "parcel index.html"
     },
     "keywords": [],
     "author": "",
@@ -12,8 +13,7 @@
     "dependencies": {
         "axios": "^0.26.0"
     },
-    "scripts": {
-        "start:db": "json-server -w db.json",
-        "start:parcel": "parcel index.html"
+    "devDependencies": {
+        "typescript": "^4.6.2"
     }
 }
